--- a/docs/002.plan/002.dev/Phase1/001.sequence_diagram.md
+++ b/docs/002.plan/002.dev/Phase1/001.sequence_diagram.md
@@ -52,10 +52,10 @@ sequenceDiagram
     AvaNode-->>Gateway: TX Details (Status, From, To, Value)
     
     alt Payment Valid
-        Gateway->>Gateway: Verify: (Status==1) && (To==Seller) && (Value>=Price)
+        Gateway->>Gateway: Verify: (Status==1 or PENDING) && (To==Seller) && (Value>=Price)
         Gateway->>DB: Mark request_id as PAID
         Gateway->>Gateway: Mint Ephemeral Token (JWT/Url)
-        Gateway-->>Client: 200 OK <br/>Body: { access_token: "xyz...", resource_url: "..." }
+        Gateway-->>Client: 200 OK <br/>Body: { access_token: "xyz...", redirect_url: "..." }
     else Payment Invalid
         Gateway-->>Client: 400 Bad Request (Verification Failed)
     end
@@ -94,6 +94,7 @@ When the Gateway returns a `402`, the body **MUST** follow this JSON schema to a
 ### 4.2. Verification Logic
 The Gateway's verification logic is the security core. It must **independently** query the RPC node.
 *   **Safety Check:** Ensure `tx_hash` is unique and has not been used for another `request_id`.
+*   **Retry Logic:** If the receipt is not found immediatey, implement exponential backoff retries (e.g., 3 attempts).
 *   **Zero-Conf vs. Confirmation:**
     *   *Default:* Wait for `latest` block (approx 1-2s confirmation).
     *   *Optimistic (Optional):* For amounts < $0.10, accept existence in `pending` block (Mempool).
