--- a/docs/002.plan/002.dev/Phase1/001.sequence_diagram_KOR.md
+++ b/docs/002.plan/002.dev/Phase1/001.sequence_diagram_KOR.md
@@ -52,10 +52,10 @@ sequenceDiagram
     AvaNode-->>Gateway: 트랜잭션 상세 (상태, 송신자, 수신자, 값)
     
     alt 결제 유효함
-        Gateway->>Gateway: 검증: (Status==1) && (To==Seller) && (Value>=Price)
+        Gateway->>Gateway: 검증: (Status==1 또는 PENDING) && (To==Seller) && (Value>=Price)
         Gateway->>DB: request_id를 결제 완료(PAID)로 표시
         Gateway->>Gateway: 임시 토큰 발행 (JWT/Url)
-        Gateway-->>Client: 200 OK <br/>Body: { access_token: "xyz...", resource_url: "..." }
+        Gateway-->>Client: 200 OK <br/>Body: { access_token: "xyz...", redirect_url: "..." }
     else 결제 유효하지 않음
         Gateway-->>Client: 400 Bad Request (검증 실패)
     end
@@ -94,6 +94,7 @@ sequenceDiagram
 ### 4.2. 검증 로직 (Verification Logic)
 게이트웨이의 검증 로직은 보안의 핵심입니다. RPC 노드를 통해 **독립적으로** 조회해야 합니다.
 *   **중복 체크:** `tx_hash`가 고유하며 다른 `request_id`에 사용되지 않았는지 확인합니다.
+*   **재시도 로직 (Retry):** 트랜잭션 영수증 조회 실패 시 즉시 에러를 반환하지 않고, 지수 백오프(Exponential Backoff)로 몇 차례 재시도하십시오.
 *   **Zero-Conf vs. Confirmation:**
     *   *기본:* `latest` 블록을 기다립니다 (약 1-2초 확정).
     *   *낙관적 (선택 사항):* $0.10 미만의 소액인 경우, `pending` 블록(멤풀)에 존재하는 것만으로도 승인할 수 있습니다.
